# Kaspersky_Finder

./: CMakeLists.txt  build.sh  main.c  readme.md  test.sh
.github/workflows/: release.yaml
src/buffer/: buffer.c  buffer.h  controller.h  instance.c  instance.h
src/executer/: executer.c  executer.h
test/: CMakeLists.txt  buffer.cpp  executer.cpp  main.cpp
